--- a/views/stb-org-dashboard.view.xml
+++ b/views/stb-org-dashboard.view.xml
@@ -87,6 +87,24 @@
 						<join name="stb-period-detailed" field="dateB"/>
 						<join name="stb-period-detailed" field="dateE"/>
 						
+						<order-by name="cnt" dir="desc"/>
+						
+						<field name="n" type="int" sql-compute="null" label="№">
+							<xpath-compute>
+								count(../preceding-sibling::xi:data[@name='stb-usage-detailed'])+1
+							</xpath-compute>
+						</field>
+						
+						<field name="n50" type="string" sql-compute="null">
+							<xpath-compute>
+								concat(
+									string(50 * floor(count(../preceding-sibling::xi:data[@name='stb-usage-detailed']) div 50) + 1)
+									,'-'
+									,string(50 * (floor(count(../preceding-sibling::xi:data[@name='stb-usage-detailed']) div 50) + 1))
+								)
+							</xpath-compute>
+						</field>
+						
 						<field name="username"/>
 						<field name="program"/>
 						<field name="path"/>
@@ -106,11 +124,9 @@
 						<field name="date"/>
 						<field name="acceptanceDate"/>
 						
-						<form name="stb-accrual-detailed-service" concept="stb-service"
-							label="Услуга" role="service"
-						>
+						<form name="stb-accrual-detailed-service" concept="stb-service">
 							<field name="id"/>
-							<field name="name"/>
+							<field name="name" label="Услуга"/>
 						</form>
 						
 						<field name="volume">
@@ -205,7 +221,9 @@
 				</region>
 				
 				<grid form="stb-usage-detailed">
-					
+					<group>
+						<by field="n50"/>
+					</group>
 				</grid>
 				
 			</display>
@@ -235,7 +253,7 @@
 							<print field="date" label="Создано"/>
 							<print field="acceptanceDate" label="Решено"/>
 						</column>
-						<column form="stb-accrual-service"/>
+						<column form="stb-accrual-detailed-service" field="name"/>
 						<column field="volume"/>
 						<column label="Описание">
 							<print field="href" label="ТЗ"/>
